Fix action links not appearing to screen readers
See http://webaim.org/techniques/css/invisiblecontent for the idea.

--- a/css/style.css
+++ b/css/style.css
@@ -127,13 +127,22 @@ td.url small a{
 	color:#bbc;
 }
 body.desktop td.actions input,body.desktop  td.actions a {
-	visibility:hidden;
+	position:absolute;
+	left-10000px;
+	top:auto;
+	width:1px;
+	height:1px;
+	overflow:hidden;
 }
 td.actions input.disabled, td.actions input.loading {
-	visibility:visible;
+	position:static;
+	width:auto;
+	height:auto;
 }
 tr:hover td.actions input, tr:hover td.actions a {
-	visibility:visible;
+	position:static;
+	width:auto;
+	height:auto;
 }
 td.actions .button {
 	font-family: Verdana, Arial;
@@ -326,5 +335,16 @@ a.bookmarklet:hover {
   font-size:11px;
 }
 tr.plugin.active a{ font-weight:bolder;}
-body.desktop tr.plugin td.plugin_desc small{ visibility:hidden;}
-tr:hover.plugin td.plugin_desc small{ visibility:visible;}
+body.desktop tr.plugin td.plugin_desc small{
+	position:absolute;
+	left:-10000px;
+	top:auto;
+	width:1px;
+		height:1px;
+	overflow:hidden;
+}
+tr:hover.plugin td.plugin_desc small{
+	position:static;
+	height:auto;
+	width:auto;
+}
